# vornoi_parallel

./: .gitignore  CMakeLists.txt  README.md
inc/: canvas.h  defines.h  geometry.h
src/: CMakeLists.txt  canvas.cpp  geometry.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test.hpp  test_geometry.cpp
